--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,16 @@ body {
 #map-select label {
   display: block;
 }
+#map-select .submenu {
+  background: #ccc;
+  padding: 0.25em;
+  display: flex;
+}
+#map-select .submenu * {
+  flex: 1 1 auto;
+}
+#map-select .submenu .metadata-link {}
+#map-select .submenu .approve-button {}
 
 
 #map {
