--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,31 @@ body {
   grid-gap: .5em;
 }
 
+
+#map-select .group {
+  border: 1px solid #ccc;
+  padding: 0.5em;
+  margin-bottom: 0.5em
+}
+#map-select h6 {
+  padding: 0;
+  margin: 0.5em 0;
+}
 #map-select label {
   display: block;
 }
+#map-select .submenu {
+  background: #ccc;
+  padding: 0.25em;
+  display: flex;
+}
+#map-select .submenu * {
+  flex: 1 1 auto;
+}
+#map-select .submenu .metadata-link {}
+#map-select .submenu .approve-button {}
+
+
 #map {
   height: 95vh;
   width: 100%;
