--- a/css/map-page.css
+++ b/css/map-page.css
@@ -46,6 +46,8 @@
   padding: 0;
   margin: 0 0 0 2em;
 }
+.layer-control-legends li.selected { color: #c84; }
+.layer-control-legends li.unselected { color: #ccc; }
 
 #map-filters {
   flex: 0 0 auto;
