--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,9 @@ body {
   font-family: sans-serif;
   background: #fffefd;
   color: #000102;
-  margin: .5em;
-  font-size: .9em;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
   line-height: 1.5;
 }
 
